@@ -113,8 +113,14 @@ public abstract class OID4VCMapper implements ProtocolMapper, OID4VCEnvironmentP
     public List<String> getMetadataAttributePath() {
         final String claimName = mapperModel.getConfig().get(CLAIM_NAME);
         final String userAttributeName = mapperModel.getConfig().get(USER_ATTRIBUTE_KEY);
-        return ListUtils.union(getAttributePrefix(),
-                               List.of(Optional.ofNullable(claimName).orElse(userAttributeName)));
+        String attributeName = Optional.ofNullable(claimName)
+                .orElse(userAttributeName);
+
+        if (attributeName == null) {
+            return Collections.emptyList();
+        }
+        
+        return ListUtils.union(getAttributePrefix(), List.of(attributeName));
     }
 
     protected List<String> getAttributePrefix() {
@@ -168,12 +174,15 @@ public abstract class OID4VCMapper implements ProtocolMapper, OID4VCEnvironmentP
      */
     public void setClaimWithMetadataPrefix(Map<String, Object> claimsOrig, Map<String, Object> claimsWithPrefix) {
         List<String> attributePath = getMetadataAttributePath();
+        if (attributePath.isEmpty()) {
+            return;
+        }
         String propertyName = attributePath.get(attributePath.size() - 1);
         if (claimsOrig.get(propertyName) != null) {
             Object claimValue = claimsOrig.get(propertyName);
             Map<String, Object> current = claimsWithPrefix;
 
-            for (int i = 0; i < attributePath.size() ; i++) {
+            for (int i = 0; i < attributePath.size(); i++) {
                 String currentSnippetName = attributePath.get(i);
                 if (i < attributePath.size() - 1) {
                     Map<String, Object> obj = (Map<String, Object>) current.get(currentSnippetName);
